force-app/main/default/objects/Photo_Submission__c/Photo_Submission__c.object-meta.xml
<CustomObject>
    <label>Photo Submission</label>
    <nameField>
        <label>Photo Submission Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Photo Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>