force-app/main/default/objects/Photo_Submission__c/fields/Date_of_Program__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Program__c</fullName>
    <label>Date of Program</label>
    <type>Date</type>
</CustomField>