force-app/main/default/objects/Photo_Submission__c/fields/Number_Of_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Attendees__c</fullName>
    <label>Number Of Attendees</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>