force-app/main/default/objects/Photo_Submission__c/fields/Number_of_Volunteers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Volunteers__c</fullName>
    <label>Number of Volunteers</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>